--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content"  side="right">
+<ion-menu persistent="true" [content]="content"  side="right">
   <ion-header class="nav-header">
     <ion-toolbar>
       <ion-title>Menu</ion-title>
