--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,14 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  first : #58cebb,
+  second : #1a95d2,
+  third : #58cebb,
+  four : #f4a876,
+  five : #12b6e8
+
 );
 
 
