--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,43 +1,47 @@
 page-home {
    
-    .main{
+}
 
-        background: url("../assets/imgs/intro-bkgrd.jpg") center  ;
-        background-repeat: no-repeat;
-        background-size: 100%;
-        margin: 0;
-     
-    }
 
-    .temp{
-        height: 250px;
-    }
+.main{
 
-    .logo{
-        margin: 0 auto;
-        padding-top: 100px;
-        width: 44%;
-        display: none;
-       
+    background: url("../assets/imgs/intro-bkgrd.jpg") center  ;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin: 0;
+ 
+}
+
+
+.content-main{
+    display: grid;   
+    height: 70%;
+    background-image: url("../assets/imgs/matimms_logo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+}
+
+.btn-journey
+{
+    width: 83%;
+    height: 60px;
+    margin:0 auto;
+   
+}
+
+
+@media screen and (min-width: 768px){
+
+    .btn-journey{
+           margin: 35px auto; 
     }
 
     .content-main{
-        display: grid;
-        margin-top: 33px;   
-    }
 
-    .btn-journey
-    {
-        width: 83%;
-        height: 60px;
-        margin: 0 auto;
-        margin-top: 66px;
-    }
+        background-size: 25%;        
+    }    
 
- /*   .content-main {
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-    }*/
-   
-}
+
+
+} 
