--- a/src/pages/posts/posts.scss
+++ b/src/pages/posts/posts.scss
@@ -24,6 +24,7 @@ page-posts {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: unset !important;
+    font-family: MyFont;
 }
 
 
@@ -44,3 +45,4 @@ page-posts {
     width: 60%;
     
 }
+
