Worked On Icons

--- a/src/pages/myjourney/myjourney.scss
+++ b/src/pages/myjourney/myjourney.scss
@@ -52,6 +52,7 @@ page-myjourney {
 .cont_data2{
     padding-top: 20px;    
     height: 100%;
+    position: relative;
 }
 
 .m_header{
@@ -114,3 +115,15 @@ page-myjourney {
     width: 100%;
 }
 
+.circle_align_btn{
+    position: absolute;
+    display: table-column-group;
+    justify-content: center;
+    width: 100%;
+    bottom: 8%;
+    line-height: 1.8;
+}
+
+.ic_colors{
+    color: gray;
+}
