added vaccination schedule date and notification

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
 
   <ion-content class="navigation-panel">
     <ion-list   >
-      <button  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button class="menu-item"  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
