--- a/src/pages/myjourney/myjourney.scss
+++ b/src/pages/myjourney/myjourney.scss
@@ -127,3 +127,87 @@ page-myjourney {
 .ic_colors{
     color: gray;
 }
+
+.ic_read_colors{
+    color: palevioletred;
+}
+
+
+.small_candy{
+    border-radius: 50%;
+    margin-left: 2%;
+    width: 25px;
+    height: 25px;
+    background: white;
+    text-align: center;
+    position: fixed;
+  //  background: url(../assets/imgs/line.png) repeat-y top;
+
+}
+
+
+.small_midd{
+
+    height: 5%;
+
+}
+
+
+.small_candy1{
+    margin-top: 9%;
+    border-radius: 50%;
+    margin-left: 2%;
+    width: 25px;
+    height: 25px;
+    background: white;
+    text-align: center;
+    position: fixed;
+  //  background: url(../assets/imgs/line.png) repeat-y top;
+
+}
+
+.small_candy2{
+    margin-top: 18%;
+    border-radius: 50%;
+    margin-left: 2%;
+    width: 25px;
+    height: 25px;
+    background: white;
+    text-align: center;
+    position: fixed;
+  //  background: url(../assets/imgs/line.png) repeat-y top;
+
+}
+
+.small_candy3{
+    margin-top: 27%;
+    border-radius: 50%;
+    margin-left: 2%;
+    width: 25px;
+    height: 25px;
+    background: white;
+    text-align: center;
+    position: fixed;
+  //  background: url(../assets/imgs/line.png) repeat-y top;
+
+}
+
+.small_candy4{
+    margin-top: 36%;
+    border-radius: 50%;
+    margin-left: 2%;
+    width: 25px;
+    height: 25px;
+    background: white;
+    text-align: center;
+    position: fixed;
+  //  background: url(../assets/imgs/line.png) repeat-y top;
+
+}
+
+.small_candy_stick{
+
+    width: 40%;
+    height: 60%;
+    margin-top: 100%;
+}
