--- a/src/pages/myjourney/myjourney.scss
+++ b/src/pages/myjourney/myjourney.scss
@@ -135,103 +135,14 @@ page-myjourney {
 }
 
 
-.small_candy{
-    border-radius: 50%;
-    margin-left: 2%;
-    width: 20px;
-    height: 20px;
-    background: white;
-    text-align: center;
-    position: fixed;
-    border: white 4px solid;
-    margin-top:  -50%;
-  //  background: url(../assets/imgs/line.png) repeat-y top;
 
-}
-
-
-.small_midd{
-
-    height: 5%;
-
-}
-
-.small_candy_stick{
-
-    width: 40%;
-    height: 180%;
-    margin-top: 125%;
-}
-
-/*
-.small_candy1{
-    margin-top: 9%;
-    border-radius: 50%;
-    margin-left: 2%;
-    width: 25px;
-    height: 25px;
-    background: white;
-    text-align: center;
-    position: fixed;
-  //  background: url(../assets/imgs/line.png) repeat-y top;
-
-}
-
-.small_candy2{
-    margin-top: 18%;
-    border-radius: 50%;
-    margin-left: 2%;
-    width: 25px;
-    height: 25px;
-    background: white;
-    text-align: center;
-    position: fixed;
-  //  background: url(../assets/imgs/line.png) repeat-y top;
-
-}
-
-.small_candy3{
-    margin-top: 27%;
-    border-radius: 50%;
-    margin-left: 2%;
-    width: 25px;
-    height: 25px;
-    background: white;
-    text-align: center;
-    position: fixed;
-  //  background: url(../assets/imgs/line.png) repeat-y top;
-
-}
-
-.small_candy4{
-    margin-top: 36%;
-    border-radius: 50%;
-    margin-left: 2%;
-    width: 25px;
-    height: 25px;
-    background: white;
-    text-align: center;
-    position: fixed;
-  //  background: url(../assets/imgs/line.png) repeat-y top;
-
-}
-*/
-
-
-.temp_one{
+.last_small_candy_stick{
    
-    height: 0%;
-    overflow: hidden;
-    display: table;
-    background: url(../assets/imgs/line.png) repeat-y top;
-    background-size: 20%;
     margin-left: 3%;
-    position: fixed;
-    margin-top: -50%;
 }
 
 
-.temp_circle {
+.small_candy {
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -239,4 +150,19 @@ page-myjourney {
     margin-bottom: 50%;
     border: white 4px solid;
     
+}
+
+.small_candy_stick{
+
+    height: 5%;
+    background: url(../assets/imgs/line.png) repeat-y top;
+    background-size: 20%; 
+    
+}
+
+.back_attach{
+
+    position: fixed;
+    margin-left: 3%;
+    margin-top: -40%;
 }
