--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -96,7 +96,7 @@ $colors: (
 
 
 ion-content.navigation-panel.content.content-md {
-  background-color: #e8789d,;
+  background-color: #e8789d;
 }
 
 ion-content.navigation-panel.content.content-ios {
