Worked On Menu Navbar

--- a/src/pages/posts/posts.scss
+++ b/src/pages/posts/posts.scss
@@ -115,7 +115,7 @@ page-posts {
     visibility: hidden;
 }
 
-
+/*
 .ion_color{
     color:gray;
     font-size: 160%;
@@ -125,7 +125,7 @@ page-posts {
 
     color: palevioletred;
 }
-
+*/
 
 .swiper-pagination-bullet {
 
