--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,13 @@
 <ion-menu persistent="true" [content]="content"  side="right">
-  <ion-header class="nav-header" >
+  <ion-header class="nav-header" [class]="selectedTheme">
     <ion-toolbar >
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="navigation-panel" >
-    <ion-list   >
-      <button class="menu-item"  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+  <ion-content class="navigation-panel " [class]="selectedTheme" >
+    <ion-list [class]="selectedTheme"  >
+      <button class="menu-item"   menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
@@ -16,4 +16,4 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" [class]="selectedTheme" #content swipeBackEnabled="false"></ion-nav>
