Worked On Small Candy

--- a/src/pages/myjourney/myjourney.scss
+++ b/src/pages/myjourney/myjourney.scss
@@ -142,15 +142,102 @@ page-myjourney {
 }
 
 
-.small_candy {
+.small_candy0 {
     border-radius: 50%;
     width: 20px;
     height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.small_candy1 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+.small_candy2 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+.small_candy3 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.small_candy4 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.small_candy5 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.small_candy6 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.small_candy7 {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 auto;
+    margin-bottom: 50%;
+    border: white 4px solid;
+    
+}
+
+.active_small_candy{
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
     background: white;
     margin-bottom: 50%;
     border: white 4px solid;
     
 }
+
 
 .small_candy_stick{
 
