Worked On Post Details

--- a/src/pages/vaccination-schedule/vaccination-schedule.scss
+++ b/src/pages/vaccination-schedule/vaccination-schedule.scss
@@ -176,7 +176,7 @@ ion-col.vaccine-duration.col {
   }
 
   img.calendar_icon {
-    width: 11%;
+    width: 15px;
     vertical-align: middle;
     margin-right: 5px;
  }
