--- a/src/theme/theme_default.scss
+++ b/src/theme/theme_default.scss
@@ -25,12 +25,12 @@
       
       .toolbar-background-md {
         border-color: #b2b2b2;
-        background: palevioletred;
+        background: #df809f;
       }
       
       .toolbar-background-ios {
         border-color: #b2b2b2;
-        background: palevioletred ;
+        background: #df809f ;
       }
 
       ion-list.default-theme {
