--- a/src/theme/theme_five.scss
+++ b/src/theme/theme_five.scss
@@ -25,12 +25,12 @@
       
       .toolbar-background-md {
         border-color: #b2b2b2;
-        background: rgb(18, 182, 232);
+        background: #229ad6;
       }
       
       .toolbar-background-ios {
         border-color: #b2b2b2;
-        background: rgb(18, 182, 232) ;
+        background: #229ad6;
       }
 
       ion-list.five-theme {
