--- a/src/theme/theme_four.scss
+++ b/src/theme/theme_four.scss
@@ -24,12 +24,12 @@
       
       .toolbar-background-md {
         border-color: #b2b2b2;
-        background: rgb(244, 168, 118);
+        background: #e88c58;
       }
       
       .toolbar-background-ios {
         border-color: #b2b2b2;
-        background: rgb(244, 168, 118);
+        background: #e88c58;
       }
 
       ion-list.four-theme {
