--- a/src/pages/myjourney/myjourney.scss
+++ b/src/pages/myjourney/myjourney.scss
@@ -10,6 +10,11 @@ page-myjourney {
     background-repeat: no-repeat;
 }
 
+.main_content{
+
+    height: 100%;
+}
+
 .circleBase {
     border-radius: 50%;
     behavior: url(PIE.htc); /* remove if you don't care about IE8 */
@@ -111,7 +116,7 @@ page-myjourney {
 }
 
 .Last_div{
-    height: 100%;
+    height: 80%;
     overflow: hidden;
     display: table;
     width: 100%;
