--- a/src/theme/theme_one.scss
+++ b/src/theme/theme_one.scss
@@ -24,12 +24,12 @@
       
       .toolbar-background-md {
         border-color: #b2b2b2;
-        background: #58cebb;
+        background: #46b9a3;
       }
       
       .toolbar-background-ios {
         border-color: #b2b2b2;
-        background: #58cebb ;
+        background: #46b9a3 ;
       }
 
       ion-list.one-theme {
