--- a/src/theme/theme_two.scss
+++ b/src/theme/theme_two.scss
@@ -25,12 +25,12 @@
       
       .toolbar-background-md {
         border-color: #b2b2b2;
-        background: rgb(26, 149, 210);
+        background: #127cc2;
       }
       
       .toolbar-background-ios {
         border-color: #b2b2b2;
-        background: rgb(26, 149, 210) ;
+        background: #127cc2 ;
       }
 
       ion-list.two-theme {
