--- a/src/pages/post-detail/post-detail.scss
+++ b/src/pages/post-detail/post-detail.scss
@@ -33,6 +33,7 @@ page-post-detail {
     font-size: 1.6rem;
     width: 40%;
     float: right;
+    margin-bottom: 3% !important;
 }
 
 .prev_post_button{
@@ -43,7 +44,7 @@ page-post-detail {
     height: 2.5em;
     font-size: 1.6rem;
     width: 40%;
-    
+    margin-bottom: 3% !important;
 }
 
 .txt_center{
